force-app/main/default/objects/Action_Form_Details__c/Action_Form_Details__c.object-meta.xml
<CustomObject>
    <label>Action Form Details</label>
    <nameField>
        <displayFormat>AFD-{0000}</displayFormat>
        <label>Action Form Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Form Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>