force-app/main/default/objects/Action_Form_Details__c/fields/Label_API__c.field-meta.xml
<CustomField>
    <fullName>Label_API__c</fullName>
    <label>Label API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>