force-app/main/default/objects/Action_Form_Details__c/fields/Mapping_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Field_API__c</fullName>
    <label>Mapping Field API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attribute1__c</fullName>
            </value>
            <value>
                <fullName>Attribute2__c</fullName>
            </value>
            <value>
                <fullName>Attribute3__c</fullName>
            </value>
            <value>
                <fullName>Attribute4__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>