force-app/main/default/objects/Action_Form_Details__c/fields/Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Details__c</fullName>
    <label>Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>Action Form Details</relationshipLabel>
    <relationshipName>Action_Form_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>