force-app/main/default/objects/Action_Form_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Input_Type__c</columns>
    <columns>Label_API__c</columns>
    <columns>Label_Name__c</columns>
    <columns>Mapping_Field_API__c</columns>
    <columns>Process_Attribute_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>